xdgshell: Fix passing focus to transient parent on close

When a modal dialog is closed we want to focus the parent.
This requires keeping information about grouping until
after workspace code is run.

BUG: 498098


(cherry picked from commit 04d95319c2d1bfbd5fa0263ce44f35cc49144ece)

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>